--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -12,7 +12,7 @@
         android:title="@string/menu_label_starships" />
 
     <item
-        android:id="@+id/navigation_new"
+        android:id="@+id/navigation_favorites"
         android:icon="@drawable/ic_launcher_background"
         android:title="@string/menu_label_new" />
 
